# tree-sitter-easyjs

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-easyjs.h  tree-sitter-easyjs.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_easyjs/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterEasyJSTests/: TreeSitterEasyJSTests.swift
src/: grammar.json  node-types.json  parser.c
test/: hello_world.ej  import.ej  struct.ej
