[package]
name = "tree-sitter-easyjs"
description = "The parser for a simple, easy to read/write programming language built to replace JavaScript."
version = "0.2.0"
authors = ["Jordan Castro <jordan@grupojvm.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "easyjs"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/jordan-castro/easyjs"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
